feat: add title, type to critique
